fix small tasks